Attempt 2 at fixing viewport overflow bug on iPhone

--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,7 @@ li{
   p{
     font-size: 12px;
   }
-  html, body{
+  body{
     overflow-y:hidden;
     position:fixed;
   }
